# packo

./: .gitignore  PACKO_ROADMAP.md  README.md  cardiganZip.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: about-logo.rgba  icon.icns  packo-document.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
static/onboarding/: README.md
