[package]
name = "cardiganzip"
version = "0.1.0"
description = "A lightweight desktop archive utility."
authors = ["sunzhaoye"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cardiganzip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-drag = "2.1.1"
chrono = "0.4"
base64 = "0.22"
url = "2.5"
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["aes256", "compress"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
core-foundation = "0.10.1"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
  "std",
  "block2",
  "NSApplication",
  "NSBitmapImageRep",
  "NSDragging",
  "NSDraggingItem",
  "NSDraggingSession",
  "NSEvent",
  "NSFilePromiseProvider",
  "NSImage",
  "NSImageRep",
  "NSOpenPanel",
  "NSPanel",
  "NSPasteboard",
  "NSResponder",
  "NSSavePanel",
  "NSView",
  "NSWindow",
  "NSWorkspace"
] }
objc2-foundation = { version = "0.3.2", features = [
  "std",
  "NSArray",
  "NSData",
  "NSDictionary",
  "NSError",
  "NSGeometry",
  "NSObject",
  "NSString",
  "NSURL"
] }
raw-window-handle = "0.6"

[dev-dependencies]
tempfile = "3.27.0"
